[gd_scene load_steps=5 format=3 uid="uid://xdfd5b6mnjgr"]

[ext_resource type="Script" uid="uid://x4uyq0hooymw" path="res://gdre_patch_pck.gd" id="1_p07vp"]
[ext_resource type="Theme" uid="uid://crq1fwn0ajw7b" path="res://gdre_theme.tres" id="1_up5g3"]
[ext_resource type="Script" uid="uid://cww2hw50p8q3i" path="res://gdre_file_tree.gd" id="3_aruht"]
[ext_resource type="Texture2D" uid="uid://byablbp3l8foe" path="res://gdre_icons/gdre_Search.svg" id="4_gm62x"]

[node name="GdrePatchPck" type="AcceptDialog"]
oversampling_override = 1.0
title = "Patch PCK"
position = Vector2i(0, 24)
size = Vector2i(1500, 648)
visible = true
theme = ExtResource("1_up5g3")
ok_button_text = "Patch"
dialog_hide_on_ok = false
script = ExtResource("1_p07vp")
metadata/_custom_type_script = "uid://cbggqwojxui00"

[node name="ErrorDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true

[node name="SelectPckDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.pck")
use_native_dialog = true

[node name="SelectPatchFilesDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open File(s)"
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 1
access = 2
use_native_dialog = true

[node name="SelectPatchMappingDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
root_subfolder = "res://"

[node name="SavePckDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
access = 2

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(1100, 350)
layout_mode = 3
anchor_right = 0.804
anchor_bottom = 0.79
offset_left = 8.0
offset_top = 8.0
offset_right = 286.0
offset_bottom = 87.07999

[node name="InfoTextHBox" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_top = 1.0
anchor_right = 0.002
anchor_bottom = 1.0
offset_left = 0.031999826
offset_top = 8.315918
offset_right = 259.032
offset_bottom = 39.315918
grow_vertical = 0

[node name="VersionLabel" type="Label" parent="Control/InfoTextHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Version:"

[node name="VersionText" type="Label" parent="Control/InfoTextHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0.0.0"

[node name="FilesLabel" type="Label" parent="Control/InfoTextHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Files:"

[node name="FilesText" type="Label" parent="Control/InfoTextHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="MainVBox" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="SelectPackHBox" type="HBoxContainer" parent="Control/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectedPck" type="LineEdit" parent="Control/MainVBox/SelectPackHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SelectPckButton" type="Button" parent="Control/MainVBox/SelectPackHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Select"

[node name="EmbedCheckBox" type="CheckBox" parent="Control/MainVBox/SelectPackHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Embed into EXE"

[node name="HSeparator" type="HSeparator" parent="Control/MainVBox"]
layout_mode = 2

[node name="MainHBox" type="HBoxContainer" parent="Control/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="PackVBox" type="VBoxContainer" parent="Control/MainVBox/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="FilterHBox" type="HBoxContainer" parent="Control/MainVBox/MainHBox/PackVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/MainVBox/MainHBox/PackVBox/FilterHBox"]
layout_mode = 2
text = "PCK Files...              "

[node name="Check" type="Button" parent="Control/MainVBox/MainHBox/PackVBox/FilterHBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Checks all shown files"
text = "Check"

[node name="Uncheck" type="Button" parent="Control/MainVBox/MainHBox/PackVBox/FilterHBox"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Unchecks all shown files"
text = "Uncheck"

[node name="Filter" type="LineEdit" parent="Control/MainVBox/MainHBox/PackVBox/FilterHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter Files"
clear_button_enabled = true
right_icon = ExtResource("4_gm62x")

[node name="FileTree" type="Tree" parent="Control/MainVBox/MainHBox/PackVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
column_titles_visible = true
select_mode = 2
script = ExtResource("3_aruht")
columnMap = Dictionary[int, int]({
0: 0
})
metadata/_custom_type_script = "uid://cww2hw50p8q3i"

[node name="PatchVBox" type="VBoxContainer" parent="Control/MainVBox/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="FilesToPatchHBox" type="HBoxContainer" parent="Control/MainVBox/MainHBox/PatchVBox"]
layout_mode = 2

[node name="FilesToPatchLabel" type="Label" parent="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Files to patch..."

[node name="PatchButtonHBox" type="HBoxContainer" parent="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8

[node name="MapButton" type="Button" parent="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox/PatchButtonHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Map selected to Folder..."

[node name="seperator" type="Container" parent="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox/PatchButtonHBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="SelectPatchFiles" type="Button" parent="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox/PatchButtonHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Select Files..."

[node name="PatchClearButton" type="Button" parent="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox/PatchButtonHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear"

[node name="PatchFileTree" type="Tree" parent="Control/MainVBox/MainHBox/PatchVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_folding = true
enable_recursive_folding = false
hide_root = true
select_mode = 2
script = ExtResource("3_aruht")
show_copy_paths_in_right_click_menu = false
check_mode = false
flat_mode = true
editable_only_when_checkbox_clicked = false
columnMap = Dictionary[int, int]({
0: 0,
2: 1
})
nameColumnName = "File"
infoColumnName = "Mapping"
metadata/_custom_type_script = "uid://cww2hw50p8q3i"

[node name="DropFoldersConfirmation" type="Window" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Select Mapping"
position = Vector2i(0, 24)
size = Vector2i(1000, 600)
visible = false
min_size = Vector2i(700, 600)
theme = ExtResource("1_up5g3")

[node name="Panel" type="Panel" parent="DropFoldersConfirmation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"LightPanel"

[node name="Control" type="MarginContainer" parent="DropFoldersConfirmation"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_up5g3")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DropFoldersConfirmation/Control"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MainHbox" type="HBoxContainer" parent="DropFoldersConfirmation/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="LeftVBox" type="VBoxContainer" parent="DropFoldersConfirmation/Control/VBoxContainer/MainHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelA" type="Label" parent="DropFoldersConfirmation/Control/VBoxContainer/MainHbox/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "\"Relative to...\" mapping"

[node name="ItemListA" type="Tree" parent="DropFoldersConfirmation/Control/VBoxContainer/MainHbox/LeftVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_root = true

[node name="RightVBox" type="VBoxContainer" parent="DropFoldersConfirmation/Control/VBoxContainer/MainHbox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelB" type="Label" parent="DropFoldersConfirmation/Control/VBoxContainer/MainHbox/RightVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "\"Relative from...\" mapping"

[node name="ItemListB" type="Tree" parent="DropFoldersConfirmation/Control/VBoxContainer/MainHbox/RightVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
column_titles_visible = true
hide_root = true

[node name="ButtonHBox" type="Control" parent="DropFoldersConfirmation/Control/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="SelectA" type="Button" parent="DropFoldersConfirmation/Control/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.24200001
anchor_right = 0.24200001
offset_left = -123.16002
offset_right = 122.83998
offset_bottom = 31.0
text = "Select \"Relative To...\" Mapping"

[node name="CancelButton" type="Button" parent="DropFoldersConfirmation/Control/VBoxContainer/ButtonHBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_right = 33.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Cancel"

[node name="SelectB" type="Button" parent="DropFoldersConfirmation/Control/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.76000005
anchor_right = 0.76000005
offset_left = -133.80005
offset_right = 134.19995
offset_bottom = 31.0
text = "Select \"Relative From...\" Mapping
"

[node name="SelectPatchFolderMappingDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
root_subfolder = "res://"

[connection signal="file_selected" from="SelectPckDialog" to="." method="_on_select_pck_dialog_file_selected"]
[connection signal="files_selected" from="SelectPatchFilesDialog" to="." method="_on_select_patch_files_dialog_files_selected"]
[connection signal="file_selected" from="SelectPatchMappingDialog" to="." method="_on_select_patch_mapping_dialog_file_selected"]
[connection signal="file_selected" from="SavePckDialog" to="." method="_on_save_pck_dialog_file_selected"]
[connection signal="pressed" from="Control/MainVBox/SelectPackHBox/SelectPckButton" to="." method="_on_select_pck_button_pressed"]
[connection signal="pressed" from="Control/MainVBox/MainHBox/PackVBox/FilterHBox/Check" to="." method="_on_check_all_pressed"]
[connection signal="pressed" from="Control/MainVBox/MainHBox/PackVBox/FilterHBox/Uncheck" to="." method="_on_uncheck_all_pressed"]
[connection signal="text_changed" from="Control/MainVBox/MainHBox/PackVBox/FilterHBox/Filter" to="." method="_on_filter_text_changed"]
[connection signal="pressed" from="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox/PatchButtonHBox/MapButton" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox/PatchButtonHBox/SelectPatchFiles" to="." method="_on_select_patch_files_pressed"]
[connection signal="pressed" from="Control/MainVBox/MainHBox/PatchVBox/FilesToPatchHBox/PatchButtonHBox/PatchClearButton" to="." method="_on_patch_clear_button_pressed"]
[connection signal="cell_selected" from="Control/MainVBox/MainHBox/PatchVBox/PatchFileTree" to="." method="_on_patch_file_tree_cell_selected"]
[connection signal="item_edited" from="Control/MainVBox/MainHBox/PatchVBox/PatchFileTree" to="." method="_on_patch_file_tree_item_edited"]
[connection signal="item_selected" from="Control/MainVBox/MainHBox/PatchVBox/PatchFileTree" to="." method="_on_patch_file_tree_item_selected"]
[connection signal="nothing_selected" from="Control/MainVBox/MainHBox/PatchVBox/PatchFileTree" to="." method="_on_patch_file_tree_nothing_selected"]
[connection signal="close_requested" from="DropFoldersConfirmation" to="." method="_on_drop_folders_confirmation_close_requested"]
[connection signal="pressed" from="DropFoldersConfirmation/Control/VBoxContainer/ButtonHBox/SelectA" to="." method="_on_select_a_pressed"]
[connection signal="pressed" from="DropFoldersConfirmation/Control/VBoxContainer/ButtonHBox/CancelButton" to="." method="_on_drop_folders_confirmation_close_requested"]
[connection signal="pressed" from="DropFoldersConfirmation/Control/VBoxContainer/ButtonHBox/SelectB" to="." method="_on_select_b_pressed"]
[connection signal="canceled" from="SelectPatchFolderMappingDialog" to="." method="_on_select_patch_folder_mapping_dialog_canceled"]
[connection signal="close_requested" from="SelectPatchFolderMappingDialog" to="." method="_on_select_patch_folder_mapping_dialog_canceled"]
[connection signal="dir_selected" from="SelectPatchFolderMappingDialog" to="." method="_on_select_patch_folder_mapping_dialog_dir_selected"]
